# conversao_dat

./: .coveragerc  .gitignore  CLAUDE.md  README.md  pyproject.toml  script.py
dat2csv/: __init__.py  cli.py  converter.py  gui.py  sps.py  utils.py
tests/: conftest.py  test_converter.py  test_preview.py  test_sps.py  test_utils.py
tests/fixtures/: com_labels.sps  concat_labels.sps  simples.sps
