[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dat2csv"
version = "0.1.0"
description = "Conversor seguro de arquivos .dat de pesquisas para CSV"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "[SEU NOME]", email = "seu.email@exemplo.com" },
]
keywords = ["csv", "dat", "converter", "survey", "spss", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/GustavoGarciaPereira/conversao_dat"
Repository = "https://github.com/GustavoGarciaPereira/conversao_dat"
Issues = "https://github.com/GustavoGarciaPereira/conversao_dat/issues"

[project.scripts]
dat2csv = "dat2csv.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["dat2csv*"]
